--- a/src/Makefile
+++ b/src/Makefile
@@ -2,27 +2,33 @@
 #                              Makefile
 # #####################################################################
 
-# Library's static name (libNAME.a)
-NAME	=	liby.a
+# Library's name
+SONAME =	liby.so
 
-# Name of source files (names.c)
-SRC       =	ylib.c
+# Name of source files
+SRC =		ymem.c		\
+		ystr.c		\
+		yvect.c		\
+		yhash.c		\
+		ymap.c		\
+		ylog.c		\
+		ylist.c		\
+		ysax.c		\
+		ydom.c		\
+		ydom_xpath.c
 
-# Name of header files (names.h)
-HEADS     =	ylib.h
-
-CAT_H	=	ydefs.h	\
-		ymem.h	\
-		ystr.h	\
-		yvect.h \
-		yhash.h \
-		ymap.h
-
-CAT_C	=	ymem.c	\
-		ystr.c	\
-		yvect.c \
-		yhash.c \
-		ymap.c
+# Name of header files
+INCLUDES =	ydefs.h		\
+		yerror.h	\
+		ymem.h		\
+		ystr.h		\
+		yvect.h		\
+		yhash.h		\
+		ymap.h		\
+		ylog.h		\
+		ylist.h		\
+		ysax.h		\
+		ydom.h
 
 # #####################################################################
 
@@ -43,48 +49,27 @@ OBJS    =	$(SRC:.c=.o)
 CFLAGS  =	-ansi -std=c99 -pedantic -Wall -Wextra -Wmissing-prototypes \
 		  -Wno-long-long -Wno-pointer-arith $(IPATH) -D_GNU_SOURCE \
 		  -D_LARGEFILE_SOURCE -D_THREAD_SAFE -fPIC
-CFLAGS_CYGWIN =	-Wall -Wmissing-prototypes -Wno-long-long $(IPATH) \
-		  -D_GNU_SOURCE -D_LARGEFILE_SOURCE -D_THREAD_SAFE
+# Link options
+LDFLAGS = -shared -Wl,-soname,$(SONAME)
 
 # #####################################################################
 
-$(NAME): gen_sources $(OBJS) $(SRC)
-	ar -r $(NAME) $(OBJS)
+.PHONY: clean all
 
-gen_sources: $(CAT_C) $(CAT_H)
-	@echo "Generate ylib.c file"
-	@cp _ylib_begin.c ylib.c
-	@for f in $(CAT_C); do \
-		echo -n "#line 1 \"" >> ylib.c; \
-		echo -n $$f >> ylib.c; \
-		echo "\"" >> ylib.c; \
-		cat $$f >> ylib.c; \
-	 done
-	@cat _ylib_end.c >> ylib.c
-	@echo "Generate ylib.h file"
-	@cat _ylib_begin.h $(CAT_H) _ylib_end.h > ylib.h
-
-test: $(NAME) main.c
-	$(CC) main.c -L. -ly -Wl,-rpath -Wl,'$$ORIGIN' -o test
-
-cygwin: $(SRC)
-	$(CC) $(CFLAGS_CYGWIN) -c $(SRC)
-	ar -r $(NAME) $(OBJS)
-	ranlib $(NAME)
-	cp $(NAME) ../
+$(SONAME): $(OBJS) $(SRC)
+	$(CC) $(OBJS) $(LDFLAGS) -o $(SONAME)
+	cp $(SONAME) ../lib/
+	cp $(INCLUDES) ../include/
 
 clean:
-	$(RM) $(OBJS) $(NAME) $(SRC) $(HEADS) test *~
+	$(RM) $(OBJS) $(SONAME) *~ test
+	$(RM) ../lib/$(SONAME)
+	cd ../include ; $(RM) $(INCLUDES)
 
-all: clean $(NAME)
+all: clean $(SONAME) test
 
-cygall: clean cygwin
-
-doc:	# needs the HeaderBrowser program
-	headerbrowser $(HEADS)
-
-docclean:
-	$(RM) -r hbresult-html
+test: main.c
+	$(CC) main.c -L. -ly -Wl,-rpath -Wl,'$$ORIGIN/../lib' -o test
 
 .c.o:
 	$(CC) $(CFLAGS) -c $<
