--- a/src/Makefile
+++ b/src/Makefile
@@ -9,13 +9,15 @@ SONAME =	liby.so
 SRC =		ymem.c		\
 		ystr.c		\
 		yvect.c		\
+		yvector.c	\
 		yhash.c		\
 		ymap.c		\
 		ylog.c		\
 		ylist.c		\
 		ysax.c		\
 		ydom.c		\
-		ydom_xpath.c
+		ydom_xpath.c	\
+		yjson.c
 
 # Name of header files
 INCLUDES =	ydefs.h		\
@@ -23,19 +25,21 @@ INCLUDES =	ydefs.h		\
 		ymem.h		\
 		ystr.h		\
 		yvect.h		\
+		yvector.h	\
 		yhash.h		\
 		ymap.h		\
 		ylog.h		\
 		ylist.h		\
 		ysax.h		\
-		ydom.h
+		ydom.h		\
+		yjson.h
 
 # #####################################################################
 
 # Paths to header files
 IPATH   =       -I.
 # Path to libraries and lib's names
-LDPATH  =       -L.
+LDPATH  =       -L. -lm
 # Compiler options
 EXEOPT  =       -O2 # -g for debug
 
@@ -46,9 +50,9 @@ RM      =	/bin/rm -f
 OBJS    =	$(SRC:.c=.o)
 
 # Objects compilation options
-CFLAGS  =	-ansi -std=c99 -pedantic -Wall -Wextra -Wmissing-prototypes \
-		  -Wno-long-long -Wno-pointer-arith $(IPATH) -D_GNU_SOURCE \
-		  -D_LARGEFILE_SOURCE -D_THREAD_SAFE -fPIC
+CFLAGS  =	-ansi -std=c11 -pedantic-errors -Wall -Wextra -Wmissing-prototypes \
+		  -Wno-long-long -Wno-pointer-arith -Wno-unused-parameter -D_GNU_SOURCE \
+		  -D_LARGEFILE_SOURCE -D_THREAD_SAFE -fPIC $(IPATH)
 # Link options
 LDFLAGS = -shared -Wl,-soname,$(SONAME)
 
@@ -69,7 +73,7 @@ clean:
 all: clean $(SONAME) test
 
 test: main.c
-	$(CC) main.c -L. -ly -Wl,-rpath -Wl,'$$ORIGIN/../lib' -o test
+	$(CC) main.c -L. -ly -lm -Wl,-rpath -Wl,'$$ORIGIN/../lib' -o test
 
 .c.o:
 	$(CC) $(CFLAGS) -c $<
